NetBSD Problem Report #42522

From www@NetBSD.org  Sun Dec 27 08:10:26 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 9908563C37E
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 27 Dec 2009 08:10:26 +0000 (UTC)
Message-Id: <20091227081026.2C02B63B844@www.NetBSD.org>
Date: Sun, 27 Dec 2009 08:10:26 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Memory leak in sys/dev/microcode/aic7xxx/aicasm.c .
X-Send-Pr-Version: www-1.0

>Number:         42522
>Category:       kern
>Synopsis:       Memory leak in sys/dev/microcode/aic7xxx/aicasm.c .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 27 08:15:00 +0000 2009
>Closed-Date:    Sun Dec 27 16:07:10 +0000 2009
>Last-Modified:  Sun Dec 27 16:07:10 +0000 2009
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Memory leak found with cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.7 aicasm.c
--- sys/dev/microcode/aic7xxx/aicasm.c	18 Mar 2009 10:22:40 -0000	1.7
+++ sys/dev/microcode/aic7xxx/aicasm.c	27 Dec 2009 07:36:08 -0000
@@ -594,6 +594,7 @@
 			if (isatty(fileno(stdin)) == 0)
 				putchar(input);
 		}
+		free(func_values);
 		fprintf(stdout, "\nThanks!\n");
 	}


>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42522 CVS commit: src/sys/dev/microcode/aic7xxx
Date: Sun, 27 Dec 2009 16:03:49 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Sun Dec 27 16:03:49 UTC 2009

 Modified Files:
 	src/sys/dev/microcode/aic7xxx: aicasm.c

 Log Message:
 Free memory when done with it.
 From Henning Petersen in PR/42522.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/sys/dev/microcode/aic7xxx/aicasm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Sun, 27 Dec 2009 16:07:10 +0000
State-Changed-Why:
fix commited in 1.8 of src/sys/dev/microcode/aic7xxx/aicasm.c


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.