Free memory when done with it. From Henning Petersen in PR/42522.